some metadata updates

--- a/src/posts/visual-regression-tests.mdx
+++ b/src/posts/visual-regression-tests.mdx
@@ -1,11 +1,19 @@
 export const title = "Visual Regression Testing with Storybook";
 export const slug = "visual-regression-testing";
-export const tags = ["javascript"];
+export const tags = [
+  "typescript",
+  "testing",
+  "storybook",
+  "jest",
+  "web",
+  "javascript",
+];
 export const description =
   "How I derive my visual regression tests from Storybook stories for quick and effective design verification";
 export const cover = "visual-regression-cover-eye-compressed.png";
-export const published = new Date(2023, 9, 17);
-export const shortCodes = ["regression-testing"];
+export const published = new Date(2023, 9, 18);
+export const shortCodes = ["regression-testing", "visual-regression-tests"];
+
 import { Cheers } from "../components/Cheers";
 
 I’ve spent a lot of my time lately working on a modern new design system for [Kizen](https://kizen.com/),
