update some internal links

--- a/src/posts/javascript-variables-in-tailwind.mdx
+++ b/src/posts/javascript-variables-in-tailwind.mdx
@@ -9,11 +9,11 @@ export const shortCodes = ["js-in-tailwind"];
 
 [Tailwind](https://tailwindcss.com/) is a CSS utility framework that provides shorthand CSS classes for rapidly composing
 designs. Instead of writing CSS rules, you simply add utility classes to your element. This blog post will be the first in a series about using Tailwind at enterprise scale and the tips and tricks
-I've developed while building a component library at [Kizen](https://kizen.com) and migrating to Tailwind from a css-in-js approach.
+I've developed while building a component library at [Kizen](https://keegan.codes/blog/beginning-a-new-chapter-of-my-career-with-kizen) and migrating to Tailwind from a css-in-js approach.
 
 Before we get started, I want to acknowledge that Tailwind can be a bit
-polarizing within the web development community. I've built many sites using Tailwind,
-and many without, but this post isn't about whether or not you should use Tailwind - that's
+polarizing within the web development community. I've built many sites [using Tailwind](https://keegan.codes/blog/deciding-on-a-custom-template-for-bootstrapping-nextjs-apps),
+and [many without](https://keegan.codes/blog/welcome-to-my-new-blog), but this post isn't about whether or not you should use Tailwind - that's
 for you to decide!
 
 With that out of the way, let's get into it! I'll start with a quick refresher on Tailwind. Take this simple element and some styling:
@@ -162,4 +162,4 @@ more about arbitrary styles in Tailwind, check out the [Tailwind docs](https://t
 > This blog post is the first in a series I'll be writing about using Tailwind in enterprise-scale applications, and
 > some of the problems we've had to solve at [Kizen](https://kizen.com) as we migrate from a CSS-in-js approach to Tailwind.
 >
-> Stay tuned for more, and if you have any topics about Tailwind at scale you'd like covered, shoot me an email at [tailwind@k10y.com](mailto:tailwind@k10y.com)!
+> Stay tuned for more under the [css](https://keegan.codes/blog/tag/css) and [Tailwind](https://keegan.codes/blog/tag/Tailwind) tags on my blog, and if you have any topics about Tailwind at scale you'd like covered, shoot me an email at [tailwind@k10y.com](mailto:tailwind@k10y.com)!
