--- a/src/posts/building-a-static-generated-blog-with-next-js.mdx
+++ b/src/posts/building-a-static-generated-blog-with-next-js.mdx
@@ -134,7 +134,7 @@ export const convertImageForExtension = (
 </picture>
 ```
 
-But wait! Where do the webp images come from? I'm glad you asked! I have a Github action that handles all my image optimization on commit. It takes any large images (> 2000px wide) and scales them down, and then converts them to webp files and commits them to the repository. In this way, all the files necessary to generate the site are right there in my repo! You can see the full Github action I use [here](https://gist.github.com/keegandonley/ddbb42448c650fc1b42ff22b1482fc70 "Github Image Action").
+But wait! Where do the webp images come from? I'm glad you asked! I have a Github action that handles all my image optimization on commit. It takes any large images (> 2000px wide) and scales them down, and then converts them to webp files and commits them to the repository. In this way, all the files necessary to generate the site are right there in my repo! You can see the full Github action I use [in this Github Gist](https://gist.github.com/keegandonley/ddbb42448c650fc1b42ff22b1482fc70 "Github Image Action").
 
 ### Search Engine Optimization
 
