--- a/src/posts/getting-back-into-design-work.mdx
+++ b/src/posts/getting-back-into-design-work.mdx
@@ -27,7 +27,7 @@ I've already started thinking about the current prompt, and will work on somethi
 
 > This image file is missing, probably when I ported over my blog. If I find it, I'll add it here!
 
-You can find me on Dribbble [here](https://dribbble.com/keegandonley) to see some of my past work!
+You can [find me on Dribbble] (https://dribbble.com/keegandonley) to see some of my past work!
 
 ---
 
