--- a/src/posts/welcome-to-my-new-blog.mdx
+++ b/src/posts/welcome-to-my-new-blog.mdx
@@ -165,7 +165,7 @@ Here's the og image for this post:
   alt="OG Image for this blog post, with the title and description"
 />
 
-Here's a super pared down example of my OG handler (see the full handler [here](https://github.com/keegandonley/keegan.codes/blob/main/src/app/api/og/page/route.tsx) if you're curious). Using
+Here's a super pared down example of my OG handler (see the full handler [open-source on my Github](https://github.com/keegandonley/keegan.codes/blob/main/src/app/api/og/page/route.tsx) if you're curious). Using
 a subset of CSS, you can build the card using react (and components work too!) and then return it as an image:
 
 ```tsx
