progress on post

--- a/src/posts/recursive-react-components.mdx
+++ b/src/posts/recursive-react-components.mdx
@@ -1,13 +1,11 @@
-import {
-  RocketLaunch,
-  FileTree,
-} from "../interactivePosts/RecursiveReact/index.tsx";
+import { RocketLaunch } from "../interactivePosts/RecursiveReact/index.tsx";
+import { FileTree } from "../interactivePosts/RecursiveReact/index.tsx";
 
 export const title = "Recursive React Component Rendering";
 export const slug = "recursive-react-component-rendering";
 export const tags = ["javascript"];
 export const description = "Description";
-export const cover = "cover";
+export const cover = "react-recursion-cover.png";
 export const published = new Date(2023, 10, 22);
 export const shortCodes = ["recursive-react"];
 
